monitoring/controllers/base/kube-prom-stack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-monitor
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: kube-prometheus-stack
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 5014
      nodePort: 30014
        #  type: ClusterIP
