monitoring/controllers/base/kube-prom-stack/servicemonitor-traefik.yaml
# --- Metrics Service ---
apiVersion: v1
kind: Service
metadata:
  name: traefik-metrics
  namespace: kube-system
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
  ports:
    - name: metrics
      port: 9100
      targetPort: metrics
      protocol: TCP
