monitoring/controllers/base/kube-prom-stack/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor-ingress
  namespace: monitoring
spec:
  rules:
  - host: monitor.x4.com
    http:
    paths:
      - pathType: Prefix
      path: "/"
      backend:
        service:
        name: kube-prometheus-stack-grafana
        port:
          number: 8014
